# LoneWolf

./: Bigbrain_pathiboy.py  Fin_referanse.py  MPC_med_egen_simulering  MPC_med_egen_simulering.py  mpc_controller.py  mpcferdigforidagmenanimasjonogsannt.py  sykkelmodel_ferdig.py
Controller/: draw_ref.py  mpc_controller.py  mpc_node  pathplanning.py
Data_collection/: remotecontrol.py  subscriber.py
Simulator/: LoneWolfParams.m  LoneWolfSimulator.slx
Vedlegg/MPC/: mpc_node
lw_controller/: LoneWolfParams.m  MPC_node.py  MPC_node_works.py  ROS_simulator.py  dobbel_oppdatert_sim.slx  mpc_Controller.py  mpc_Controller_works.py  mpc_v2.py  trippel_oppdatert_sim.slx
lw_controller_v2/: mpc_jorgen.py  mpc_jorgen_ipopt.py  mpc_node_jorgen  mpc_node_jorgen.py
src/data/: data_export_2024-02-08-11-33-09.csv
src/lw_data_collector/: package.xml  setup.cfg  setup.py
src/lw_data_collector/lw_data_collector/: publisher.py
